@@ -2,8 +2,6 @@
 
 -Add Language, Translator, Pronouncer to website.
 
--copy and paste from review window?
-
 
 Android:
 
